# backEnd/routes.js
@@ -6,6 +6,7 @@ import cookieParser from 'cookie-parser';
 
 import { createUser, loginUser, getUser, updateUser, deleteUser, buyCredits, buySuperheroPackage, getUserCards, sellUserCards } from './controllers/users.js';
 import { newTrade, getTrades, acceptTrade, rejectTrade, cancelTrade } from './controllers/trade.js';
+import { getSuperHero } from './controllers/marvel.js';
 import { authenticate } from './middleware/auth.js';
 
 
@@ -40,6 +41,8 @@ router.put('/trade/:tradeId/accept', authenticate, acceptTrade);
 router.put('/trade/:tradeId/reject', authenticate, rejectTrade);
 router.delete('/trade/:tradeId/cancel', authenticate, cancelTrade);
 
+// Rotte per gestire i supereroi
+router.get('/superhero/:id', getSuperHero);
 
 // 404 per le root api
 router.use((req, res) => {
